Remove tmate and run smoke test in CI

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -126,38 +126,11 @@ jobs:
       - name: Set up environment
         run: cp .env.example .env
 
-      - name: Setup tmate session for debugging
-        uses: mxschmitt/action-tmate@v3
-        with:
-          limit-access-to-actor: true
-          timeout-minutes: 30
-
       - name: Start services
         run: |
           docker compose up -d
-          echo "Services started, waiting for health checks..."
-          
-          # Show initial status
-          echo "Initial service status:"
-          docker compose ps
-          
-          # Wait for services to be healthy with debugging
-          timeout 300 bash -c '
-            attempt=1
-            until docker compose ps | grep -q "healthy"; do
-              echo "Attempt $attempt: Waiting for services to be healthy..."
-              echo "Current service status:"
-              docker compose ps
-              echo "Checking for 'healthy' in output:"
-              docker compose ps | grep "healthy" || echo "No healthy services found yet"
-              echo "---"
-              sleep 5
-              attempt=$((attempt + 1))
-            done
-          '
-          
-          echo "Health check complete! Final status:"
-          docker compose ps
+          # Wait for services to be healthy
+          timeout 300 bash -c 'until docker compose ps | grep -q "healthy"; do sleep 5; done'
 
       - name: Build CLI
         run: cargo build --release --bin attune
@@ -170,5 +143,5 @@ jobs:
         run: cargo test --test smoke
 
       - name: Stop services
-        if: (true)
+        if: always()
         run: docker compose down
