Fix index generation by arch (#105)

--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -11,34 +11,37 @@ base64.workspace = true
 bon.workspace = true
 bytes.workspace = true
 chrono.workspace = true
-colored.workspace = true
 clap.workspace = true
+colored.workspace = true
 debian-packaging.workspace = true
 digest.workspace = true
 gpgme.workspace = true
 hex.workspace = true
 http.workspace = true
 inquire.workspace = true
+itertools.workspace = true
 md-5.workspace = true
 percent-encoding.workspace = true
 pgp.workspace = true
 reqwest.workspace = true
-serde.workspace = true
 serde_json.workspace = true
+serde.workspace = true
 sha1.workspace = true
 sha2.workspace = true
 sqlx.workspace = true
+attune-macros.workspace = true
 tabled.workspace = true
 tabwriter.workspace = true
 time.workspace = true
 tokio.workspace = true
-tower.workspace = true
 tower-http.workspace = true
-tracing.workspace = true
+tower.workspace = true
 tracing-subscriber.workspace = true
+tracing.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
 indoc = "2"
 testcontainers = "0.25.0"
 xshell = "0.2.7"
+axum-test.workspace = true
