--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -24,6 +24,17 @@ jobs:
   rust:
     name: Build, check, and test Rust
     runs-on: ubuntu-latest
+    env:
+      ATTUNE_DATABASE_URL: postgresql://attune:attune@localhost:5432/attune
+    services:
+      postgres:
+        image: postgres:17.4-bookworm
+        env:
+          POSTGRES_USER: attune
+          POSTGRES_PASSWORD: attune
+          POSTGRES_DB: attune
+        ports:
+          - "5432:5432"
     steps:
       # Since these installation steps don't require checkout, technically we
       # could do them ahead of time and just cache the resulting image.
@@ -56,10 +67,20 @@ jobs:
       - name: Check format
         run: cargo fmt --all --check
 
-      # Note that we don't have a separate `cargo sqlx prepare --workspace
-      # --check` step because missing query cache will cause this build to fail
-      # anyway, and installing the `cargo sqlx` tool takes longer than waiting
-      # for the build to fail due to missing migrations.
+      - name: Migrate database
+        working-directory: ./docker/migrate
+        run: |
+          npm install
+          npm run migrate
+
+      - name: Install sqlx-cli
+        uses: taiki-e/install-action@v2
+        with:
+          tool: sqlx-cli
+
+      - name: Check sqlx queries
+        run: cargo sqlx prepare --workspace --check -- --tests
+
       - name: Check build
         run: cargo check --workspace --all-targets --all-features
 
