--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -15,6 +15,7 @@ clap.workspace = true
 colored.workspace = true
 debian-packaging.workspace = true
 digest.workspace = true
+futures-util.workspace = true
 gpgme.workspace = true
 hex.workspace = true
 http.workspace = true
