--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ hex = "0.4.3"
 http = "1.3.1"
 inquire = "0.7.5"
 itertools = "0.14.0"
+lazy-regex = "3.4.1"
 md-5 = "0.10.6"
 percent-encoding = "2.3.1"
 pgp = "0.16.0"
