--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -20,6 +20,7 @@ hex.workspace = true
 http.workspace = true
 inquire.workspace = true
 itertools.workspace = true
+lazy-regex.workspace = true
 md-5.workspace = true
 percent-encoding.workspace = true
 pgp.workspace = true
