--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -16,6 +16,7 @@ chrono.workspace = true
 clap.workspace = true
 colored.workspace = true
 debian-packaging.workspace = true
+derive_more.workspace = true
 digest.workspace = true
 gpgme.workspace = true
 hex.workspace = true
