--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bytes = "1.10.1"
 chrono = "0.4.41"
 clap = { version = "4.5.35", features = ["derive", "env", "wrap_help"] }
 colored = "3.0.0"
+derive_more = { version = "2.0.1", features = ["full"] }
 debian-packaging = "0.18.0"
 digest = "0.10.7"
 futures-util = "0.3.31"
