--- a/docker/attune/Dockerfile
+++ b/docker/attune/Dockerfile
@@ -4,14 +4,13 @@ RUN apt-get update && apt-get install -y pkg-config libgpg-error-dev libgpgme-de
 
 COPY Cargo.toml Cargo.lock ./
 COPY ./packages/attune/Cargo.toml ./packages/attune/Cargo.toml
-COPY ./packages/attune-macros/Cargo.toml ./packages/attune-macros/Cargo.toml
-RUN mkdir -p packages/attune/src && mkdir -p packages/attune-macros/src && \
-    echo 'fn main() { println!("Placeholder build target")}' > ./packages/attune/src/main.rs && \
-    echo 'fn main() { println!("Placeholder build target")}' > ./packages/attune-macros/src/lib.rs
+COPY ./packages/attune-macros ./packages/attune-macros
+COPY ./docker/migrate/prisma/migrations ./docker/migrate/prisma/migrations
+RUN mkdir -p packages/attune/src && echo 'fn main() { println!("Placeholder build target")}' > ./packages/attune/src/main.rs
 RUN cargo build --release
+RUN rm -f packages/attune/src/main.rs && rm -f packages/attune-macros/src/lib.rs
 COPY ./.sqlx ./.sqlx
 COPY ./packages ./packages
-RUN rm -f packages/attune/src/main.rs
 RUN cargo build --release --bin attune-server
 
 FROM debian:bookworm-slim AS runtime
