--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,6 +21,34 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  docker:
+    name: Test Docker image build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: docker-metadata
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build Docker image to test
+        id: docker-build
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./docker/attune/Dockerfile
+          push: false
+          tags: ${{ steps.docker-metadata.outputs.tags }}
+          labels: ${{ steps.docker-metadata.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
   rust:
     name: Build, check, and test Rust
     runs-on: ubuntu-latest
