--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Remove empty EE crate
+        run: rm -r ./packages/attune-ee
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
