--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -14,6 +14,7 @@ chrono.workspace = true
 clap.workspace = true
 colored.workspace = true
 debian-packaging.workspace = true
+derivative.workspace = true
 digest.workspace = true
 gpgme.workspace = true
 hex.workspace = true
