--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -136,6 +136,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgpg-error-dev libgpgme-dev pkg-config
 
+      - name: Install MinIO CLI
+        run: |
+          curl https://dl.min.io/client/mc/release/linux-amd64/mc -o mc
+          chmod +x mc
+          sudo mv mc /usr/local/bin/
+
       - name: Remove empty EE crate
         run: rm -r ./packages/attune-ee
 
