--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,6 +12,7 @@ on:
       - "**/*.lock"
       - "**/.gitignore"
       - "**/LICENSE"
+  merge_group: [checks_requested]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
