fix: I love how typoes cause silent hanging instead of errors

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ on:
       - "**/*.lock"
       - "**/.gitignore"
       - "**/LICENSE"
-  merge_group: [checks_requested]
+  merge_group:
+    types: [checks_requested]
   workflow_dispatch:
 
 concurrency:
