fix: Main branch CI integration tests (#116)
* fix: Main branch CI integration tests

* ci: Add concurrency control

* ci: Add merge queue trigger

* fix: I love how typoes cause silent hanging instead of errors

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,6 +12,8 @@ on:
       - "**/*.lock"
       - "**/.gitignore"
       - "**/LICENSE"
+  merge_group:
+    types: [checks_requested]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
