--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,6 +21,11 @@ concurrency:
 
 env:
   CARGO_TERM_COLOR: always
+  # These values are from Minio, which is used in integration tests.
+  AWS_REGION: us-east-1
+  AWS_ACCESS_KEY_ID: attuneminio
+  AWS_SECRET_ACCESS_KEY: attuneminio
+  AWS_ENDPOINT_URL_S3: http://localhost:9000
 
 jobs:
   docker:
@@ -62,6 +67,17 @@ jobs:
           POSTGRES_DB: attune
         ports:
           - "5432:5432"
+      minio:
+        image: minio/minio:RELEASE.2025-04-08T15-41-24Z-cpuv1
+        env:
+          MINIO_ROOT_USER: attuneminio
+          MINIO_ROOT_PASSWORD: attuneminio
+          MINIO_DOMAIN: localhost
+        ports:
+          - "9000:9000"
+          - "9001:9001"
+        volumes:
+          - ./minio-data:/data
     steps:
       # Since these installation steps don't require checkout, technically we
       # could do them ahead of time and just cache the resulting image.
@@ -79,6 +95,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgpg-error-dev libgpgme-dev pkg-config
+
+      # This sets up the default integration testing bucket in Minio.
+      - name: Create Minio bucket
+        run: mkdir -p ./minio-data/attune-dev-0
 
       - uses: actions/checkout@v4
 
