By-Hash support  (#82)

--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -16,6 +16,7 @@ colored.workspace = true
 debian-packaging.workspace = true
 derivative.workspace = true
 digest.workspace = true
+futures-util.workspace = true
 gpgme.workspace = true
 hex.workspace = true
 http.workspace = true
