--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2024"
 aws-config.workspace = true
 aws-sdk-s3.workspace = true
 axum.workspace = true
-axum-test.workspace = true
 base64.workspace = true
 bon.workspace = true
 bytes.workspace = true
@@ -42,3 +41,8 @@ tower.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
 uuid.workspace = true
+
+[dev-dependencies]
+async-tempfile.workspace = true
+axum-test.workspace = true
+test-log.workspace = true
