--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ lazy-regex = "3.4.1"
 md-5 = "0.10.6"
 percent-encoding = "2.3.1"
 pgp = "0.16.0"
+rand = "0.9.2"
 reqwest = { version = "0.12.22", features = ["json", "multipart"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
