--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -26,6 +26,7 @@ lazy-regex.workspace = true
 md-5.workspace = true
 percent-encoding.workspace = true
 pgp.workspace = true
+rand.workspace = true
 reqwest.workspace = true
 serde_json.workspace = true
 serde.workspace = true
