ci: Does this work?

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -98,7 +98,8 @@ jobs:
 
       # This sets up the default integration testing bucket in Minio.
       - name: Create Minio bucket
-        run: mkdir -p ./minio-data/attune-dev-0
+        run: |
+          sudo mkdir -p ./minio-data/attune-dev-0
 
       - uses: actions/checkout@v4
 
