--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -12,6 +12,7 @@ bon.workspace = true
 bytes.workspace = true
 chrono.workspace = true
 clap.workspace = true
+color-eyre.workspace = true
 colored.workspace = true
 debian-packaging.workspace = true
 derivative.workspace = true
@@ -36,6 +37,7 @@ sqlx.workspace = true
 attune-macros.workspace = true
 tabled.workspace = true
 tabwriter.workspace = true
+thiserror.workspace = true
 time.workspace = true
 tokio.workspace = true
 tower-http.workspace = true
