--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -112,7 +112,7 @@ jobs:
           cache-all-crates: true
 
       - name: Check format
-        run: cargo fmt --all --check
+        run: cargo +nightly fmt --all --check
 
       - name: Migrate and check database
         working-directory: ./docker/migrate
