test: Uploading same package IDs with different hashes fails

--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -47,4 +47,5 @@ uuid.workspace = true
 [dev-dependencies]
 async-tempfile.workspace = true
 axum-test.workspace = true
+indoc.workspace = true
 test-log.workspace = true
