fix: Install nightly toolchain

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -87,7 +87,10 @@ jobs:
       # If you decide to make this change, make sure to benchmark whether it's
       # actually faster.
       - name: Install Rust
-        run: rustup show
+        run: |
+          rustup toolchain install nightly
+          rustup component add --toolchain nightly rustfmt
+          rustup show
 
       # These should match `../docker/attune/Dockerfile`.
       - name: Install system dependencies
