--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,4 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 url = "2.5.4"
 uuid = { version = "1.17.0", features = ["v4", "v7"] }
+workspace_root = "0.1.2"
