--- a/packages/attune/Cargo.toml
+++ b/packages/attune/Cargo.toml
@@ -4,14 +4,17 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+async-tempfile.workspace = true
 aws-config.workspace = true
 aws-sdk-s3.workspace = true
 axum.workspace = true
+axum-test.workspace = true
 base64.workspace = true
 bon.workspace = true
 bytes.workspace = true
 chrono.workspace = true
 clap.workspace = true
+color-eyre.workspace = true
 colored.workspace = true
 debian-packaging.workspace = true
 derivative.workspace = true
@@ -36,6 +39,7 @@ sqlx.workspace = true
 attune-macros.workspace = true
 tabled.workspace = true
 tabwriter.workspace = true
+thiserror.workspace = true
 time.workspace = true
 tokio.workspace = true
 tower-http.workspace = true
@@ -45,7 +49,6 @@ tracing.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
-async-tempfile.workspace = true
-axum-test.workspace = true
 indoc.workspace = true
 test-log.workspace = true
+workspace_root.workspace = true
