--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,8 +99,11 @@ jobs:
           npm run migrate
           npm run diff
 
+      # We can't run the E2E test in the same job that we run the unit tests,
+      # because the E2E tests bring up their own Docker Compose service
+      # dependencies that will clash with the job's service containers.
       - name: Run tests
-        run: cargo test --workspace --all-targets --all-features --release
+        run: cargo test --workspace --all-targets --all-features --release -- --skip it
 
       # Build binaries.
       - name: Build binaries
